--- a/css/maquiagem.css
+++ b/css/maquiagem.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background-color: var(--rosa);
+    background-color: #FFF;
 }
 
 .container-principal{
@@ -45,6 +45,8 @@ body{
     display: flex;
     justify-content: center;
     text-align: center;
+    padding: 10px;
+    margin-top: 10%;
 }
 
 @media screen and (max-width: 880px){
