--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,6 @@ header{
 }
 
 .btn{
-    border: 10px black;
     display: flex;
     justify-content: center;
     background-color: #FFF;
@@ -136,6 +135,7 @@ header{
 
 footer{
     width: 100%;
+    margin-top: 40%;
 }
 
 .container-foot{
@@ -196,137 +196,68 @@ section p{
     background-color: #FFF;
     color: black;
 }
-/* *{
-    padding: 0;
-    margin: 0;
-}
 
-.inicio{
-    background-color: black;
-    height: 20px;
-}
-
-.nav-bar{
+.procura-produto{
+    margin-left: 50%;
     background-color: var(--rosa);
+    margin-top: 15%;
+    border-radius: 20px;
+    transform: translate(-50%, -50%)   
+}
+
+.procura-produto h1{
     display: flex;
-    justify-content: space-around;
-}
-
-.nav-bar ul{
-    display: flex;
-    width: 25%;
-}
-
-
-.perfil{
-    border-radius: 50px;
-    padding: 10px;
-}
-
-header{
-    display: flex;
-    flex-direction: column;
-}
-
-.buscar{
-    align-items: center;
-    display: flex; 
-    width: 50%;
-}
-
-.busque{
-    border-radius: 5px;
-    padding: 2px;
-    width: 100%;
-}
-
-.botao{
-    background-color: var(--rosa);
-    border: #FFD0CC;
-}
-
-.login{
-    text-align: center;
-    font-family: "Inter", sans-serif;
-    color: #FFF;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    padding: 2px;
-    font-size: 1.15rem;
-}
-
-.opcoes{
-    display: flex;
-    border-radius: 10px;
-    color: #FFF;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.imagem-principal{
-    display: flex;
-    padding: 10px;
-    width: 100%;
     justify-content: center;
     align-items: center;
+    margin-top: 5px;
+    text-align: center;
 }
 
-.imagens-principais{
+.procura-produto button{
     display: flex;
+    justify-content: space-between;
+    background-color: #FFF;
+    align-items: center;
+    width: 150px;
+    border-radius: 10px;
+    padding: 10px;
+    cursor: pointer;
 }
 
-.boca{
-    padding: 0px 13px;
+.procura-produto button a{
+    text-decoration: none;
 }
 
-.piguimento{
-    padding: 12px 0px;
-}
-
-.paleta-1{
-    padding: 12px 0px;
-}
-
-.maquiagens{
+.click{
     display: flex;
+    justify-content: center;
+    background-color: #FFF;
+    align-items: center;
+    width: 150px;
+    border-radius: 10px;
     padding: 20px;
 }
 
-section img{
-    width: 200px;
-    height: 204px;
-}
-
-.info{
-    display: flex;
-    background-color: var(--rosa);
-    align-items: center;
-    justify-content: space-around;
-}
-
-.info ul{
-    display: flex;
-    list-style: none; 
-    justify-content: center;
-}
-
-.presente{
-    padding: 0px 50px;
-}
-
-.nav-login li{
-    display: flex;
-}
-
-.nav-infor{
-    margin: 0px 15px;
-}
-
-.nav-link{
+.click a{
     text-decoration: none;
+    color: black;
+    text-align: center;
+}
+
+.click:hover{
+    background-color: black;
+}
+
+.click a:hover{
     color: #FFF;
-    font-size: 1.15rem;
-    font-family: "Inter", sans-serif;
-    font-weight: 400;
-} */
+}
+
+.paleta{
+    padding-left: 10px;
+    padding-top: 10px;
+    width: 100%;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    left: 10%;
+}
